# relay

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_environment_source_sync.sql  0003_environment_hooks.sql  0004_environment_sync_events.sql
backend/src/: app_state.rs  config.rs  lib.rs  main.rs  terminal.rs
backend/src/api/: environments.rs  mod.rs  slack.rs  streams.rs  tasks.rs
backend/src/db/: mod.rs  models.rs  queries.rs
backend/src/environments/: git.rs  mod.rs  service.rs
backend/src/policies/: bans.rs  evaluator.rs  markdown_parser.rs  mod.rs
backend/src/runner/: codex_cli.rs  mod.rs  terminal_stream.rs
backend/src/slack/: formatter.rs  message_manager.rs  mod.rs  socket_mode.rs  thread_context.rs  web_api.rs
backend/src/tasks/: mod.rs  orchestrator.rs  reply_service.rs  session_service.rs
backend/src/utils/: tracing.rs
backend/src/workflows/: loader.rs  matcher.rs  mod.rs  renderer.rs  selector.rs
backend/src/workspaces/: cleanup.rs  mod.rs  session_workspace.rs
backend/tests/: policy_workflow_tests.rs
docs/: architecture.md  policy-format.md  runtime-layout.md  workflow-format.md
frontend/: .env.example  .gitignore  AGENTS.md  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/tests/: chat-transcript.test.tsx  environment-detail-manager.test.tsx  environment-manager.test.tsx  manage-bot-manager.test.tsx  (+1 more)
scripts/: run_server
(+35 files in other folders)
