[package]
name = "relay-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dotenvy = "0.15"
futures-util = "0.3"
git2 = "0.19"
http = "1.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.10", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.12"
